# wheel

./: .cirrus.yml  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  METADATA.in  README.rst  README.txt  appveyor.yml  bento.info  entry_points.txt  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini  vendorize.sh  wheeldemo.sh  wscript
.github/workflows/: codeqa-test-tag.yml  codeqa-test.yml  publish-requirements.in  publish-requirements.txt  publish.yml  test.yml
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  installing.rst  make.bat  news.rst  quickstart.rst  story.rst  user_guide.rst
docs/manpages/: wheel.rst
docs/reference/: index.rst  wheel_convert.rst  wheel_info.rst  wheel_install.rst  wheel_install_scripts.rst  wheel_keygen.rst  wheel_pack.rst  wheel_tags.rst  wheel_unpack.rst  wheel_unsign.rst  wheel_verify.rst
manpages/: wheel.rst
src/wheel/: __init__.py  __main__.py  _bdist_wheel.py  _macosx_libfile.py  _metadata.py  _setuptools_logging.py  _wheelfile.py  bdist_wheel.py  macosx_libfile.py  metadata.py  pep425tags.py  pkginfo.py  util.py  wheelfile.py
src/wheel/_cli/: __init__.py  _convert.py  _pack.py  _tags.py  _unpack.py  convert.py  pack.py  unpack.py
src/wheel/_commands/: info.py  pack.py  tags.py
src/wheel/cli/: __init__.py  convert.py  pack.py  tags.py  unpack.py
tests/: conftest.py  pydist-schema.json  test_bdist_wheel.py  test_deprecated_wheelfile.py  test_egg2wheel.py  test_install.py  test_keys.py  test_lib_file_analyse.py  test_macosx_libfile.py  test_metadata.py  test_pkginfo.py  test_ranking.py  test_sdist.py  test_tagopt.py  test_tool.py  test_wheelfile.py
tests/_cli/: test_convert.py  test_pack.py  test_tags.py  test_unpack.py
tests/cli/: test_convert.py  test_pack.py  test_tags.py  test_unpack.py
tests/commands/: test_convert.py  test_info.py  test_pack.py  test_tags.py  test_unpack.py  util.py
tests/complex-dist/: setup.py
tests/extension.dist/: setup.py
tests/simple.dist/: setup.py
tests/testdata/: test-1.0-py2.py3-none-any.whl
tests/testdata/abi3extension.dist/: setup.py
tests/testdata/commasinfilenames.dist/: setup.py
tests/testdata/complex-dist/: setup.py
tests/testdata/extension.dist/: setup.py
tests/testdata/headers.dist/: setup.py
tests/testdata/simple.dist/: setup.py
tests/testdata/unicode.dist/: setup.py
wheel/: __init__.py  __main__.py  archive.py  bdist_wheel.py  bdist_wininst2wheel.py  decorator.py  dist_info.py  egg2wheel.py  eggnames.txt  install.py  keys.py  lib_file_analyse.py  macosx_libfile.py  markers.py  metadata.py  paths.py  pep425tags.py  pkginfo.py  signatures.py  test.py  util.py  wheelfile.py  wininst2wheel.py
wheel/cli/: __init__.py  convert.py  pack.py
wheel/pkg_resources/: __init__.py  pkg_resources2.py  pkg_resources3.py
wheel/signatures/: __init__.py  djbec.py  ed25519py.py
wheel/test/: __init__.py  conftest.py  pydist-schema.json  pymeta-schema.json  test_basic.py  test_bdist_wheel.py  test_install.py  test_keys.py  test_paths.py  test_pkg_resources.py  test_pkginfo.py  test_ranking.py  test_signatures.py  test_tagopt.py  test_tool.py  test_wheelfile.py
wheel/test/complex-dist/: setup.py
wheel/test/complex.dist/: setup.py
wheel/test/headers.dist/: setup.py
wheel/test/simple.dist/: setup.py
wheel/tool/: __init__.py
