[nosetests]
where=wheel/test
cover-package=wheel
nocapture=1
with-coverage=1
cover-erase=1
with-doctest=1

[metadata]
provides-extra = 
    tool
    signatures
    faster-signatures
requires-dist = 
    distribute >= 0.6.30
    argparse; python_version == '2.6'
    keyring; extra == 'signatures'
    dirspec; sys.platform != 'win32' and extra == 'signatures'
    ed25519ll; extra == 'faster-signatures'
license-file = LICENSE.txt

[wheel]
universal=1 # use py2.py3 tag for pure-python dist
