[pytest]
addopts=--ignore=dist --ignore=build --cov=wheel

[metadata]
provides-extra =
    tool
    signatures
    faster-signatures
requires-dist =
    argparse; python_version == '2.6'
    keyring; extra == 'signatures'
    pyxdg; sys.platform != 'win32' and extra == 'signatures'
    ed25519ll; extra == 'faster-signatures'
license-file = LICENSE.txt

[wheel]
# use py2.py3 tag for pure-python dist:
universal=1
