[metadata]
name = wheel
version = attr: wheel.__version__
description = A built-package format for Python
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: System :: Archiving :: Packaging
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
author = Daniel Holth
author_email = dholth@fastmail.fm
maintainer = Alex Grönholm
maintainer_email = alex.gronholm@nextday.fi
url = https://github.com/pypa/wheel
project_urls =
    Documentation = https://wheel.readthedocs.io/
    Changelog = https://wheel.readthedocs.io/en/stable/news.html
    Issue Tracker = https://github.com/pypa/wheel/issues
keywords = wheel, packaging
license = MIT

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >= 6.2.0
    setuptools >= 57
types =
    mypy >= 0.982
    pytest >= 6.2
    types-setuptools >= 65.5.0.2

[options.entry_points]
console_scripts =
    wheel = wheel._cli:main
distutils.commands =
    bdist_wheel = wheel.bdist_wheel:bdist_wheel

[tool:isort]
src_paths = src
profile = black
skip_gitignore = true

[flake8]
max-line-length = 88

[tool:pytest]
testpaths = tests
addopts = --tb=short
filterwarnings =
    ignore::DeprecationWarning:wheel.wheelfile

[coverage:run]
source = wheel
omit = */vendored/*

[coverage:report]
show_missing = true

[mypy]
files = src,tests
python_version = 3.8
exclude = testdata/

[mypy-wheel.vendored.*]
ignore_errors = True
